correcciones para nube

--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
   <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;600;700&display=swap" rel="stylesheet"/>
   <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/material-design-iconic-font@2.2.0/dist/css/material-design-iconic-font.min.css"/>
 
-  <link rel="stylesheet" href="../src/pages/login/login.css">
+  <link rel="stylesheet" href="/tf_farmacia_frontend/src/pages/login/login.css">
 </head>
 <body>
   <div class="login-img">
@@ -71,7 +71,7 @@
       const email = document.getElementById('email');
       const password = document.getElementById('password');
 
-      const TARGET = '/src/pages/products/products.html';
+      const TARGET = '/tf_farmacia_frontend/src/pages/products/products.html';
 
       btn.addEventListener('click', () => {
         if (!email.checkValidity() || !password.checkValidity()) {
